# egg

./: .gitignore  .travis.yml  CHANGELOG.md  CITATION.bib  Cargo.toml  LICENSE  Makefile  README.md  all.html  check.sh  crates.js  enum.ENodeOrVar.html  enum.StopReason.html  eval-library.rkt  eval-results.rkt  help.html  herbie_benchmark_explanations.sh  index.html  macro.define_language.html  macro.rewrite!.html  release.toml  rust-toolchain  search-index.js  settings.html  source-files.js  src-files.js  struct.AstDepth.html  struct.BackoffScheduler.html  struct.ConditionEqual.html  struct.EClass.html  struct.Iteration.html  struct.Rewrite.html  struct.SimpleScheduler.html  struct.Subst.html  struct.Symbol.html  struct.SymbolLang.html  trait.IterationData.html  trait.Language.html  trait.RewriteScheduler.html  trait.Searcher.html
benches/: bench_tests.rs  definitions.rs  math.rs  parallel.rs  schedulers.rs  simple.rs
data/: speedup-data.tex
doc/: egraphs.drawio
dot/: struct.Dot.html
egg/: Cargo.toml  all.html  enum.ENodeOrVar.html  enum.Justification.html  enum.MultiPatternParseError.html  enum.RecExprParseError.html  enum.StopReason.html  fn.merge_if_different.html  fn.merge_max.html  fn.merge_min.html  fn.merge_option.html  index.html  macro.define_language!.html  macro.define_language.html  macro.multi_rewrite!.html  macro.multi_rewrite.html  macro.rewrite!.html  macro.rewrite.html  macro.test_fn!.html  macro.test_fn.html  sidebar-items.js  struct.AstDepth.html  struct.AstSize.html  struct.BackoffScheduler.html  struct.ConditionEqual.html  struct.ConditionalApplier.html  struct.DidMerge.html  struct.Dot.html  struct.EClass.html  struct.EGraph.html  struct.Explanation.html  struct.Extractor.html  struct.FlatTerm.html  struct.FromOpError.html  struct.Id.html  struct.Iteration.html  struct.LpExtractor.html  struct.MultiPattern.html  struct.Pattern.html  struct.RecExpr.html  (+31 more)
egg-math/: Cargo.toml
egg-math/src/: lib.rs  rules.rs
egg-math/tests/: tests.rs
egg/dot/: struct.Dot.html
egg/eclass/: struct.EClass.html
egg/egraph/: struct.EGraph.html  struct.SimpleLanguageMapper.html  trait.LanguageMapper.html
egg/explain/: enum.Justification.html  struct.Explanation.html  struct.FlatTerm.html  struct.TreeTerm.html  type.FlatExplanation.html  type.TreeExplanation.html  type.UnionEqualities.html
egg/extract/: struct.AstDepth.html  struct.AstSize.html  struct.Extractor.html  trait.CostFunction.html
egg/language/: enum.RecExprParseError.html  fn.merge_max.html  fn.merge_min.html  fn.merge_option.html  struct.DidMerge.html  struct.FromOpError.html  struct.RecExpr.html  struct.SymbolLang.html  trait.Analysis.html  trait.FromOp.html  trait.Language.html  trait.LanguageChildren.html
egg/lp_extract/: struct.LpExtractor.html  trait.LpCostFunction.html
egg/multipattern/: enum.MultiPatternParseError.html  struct.MultiPattern.html
egg/pattern/: enum.ENodeOrVar.html  struct.Pattern.html  struct.SearchMatches.html  type.PatternAst.html
egg/rewrite/: struct.ConditionEqual.html  struct.ConditionalApplier.html  struct.Rewrite.html  struct.RewriteBorrow.html  trait.Applier.html  trait.Condition.html  trait.Searcher.html  type.Rewrite.html
egg/run/: enum.StopReason.html  struct.BackoffScheduler.html  struct.Iteration.html  struct.Report.html  struct.Runner.html  struct.RunnerLimits.html  struct.SimpleScheduler.html  trait.IterationData.html  trait.RewriteScheduler.html  type.RunnerResult.html
egg/src/: dot.rs  egraph.rs  expr.rs  extract.rs  lib.rs  parse.rs  pattern.rs  unionfind.rs
egg/subst/: struct.Subst.html  struct.Var.html
egg/tests/: lambda.rs  list.rs  math.rs  prop.rs
egg/tutorials/: index.html  sidebar-items.js
egg/tutorials/_01_background/: index.html
egg/tutorials/_02_getting_started/: index.html
egg/tutorials/_03_explanations/: index.html
egg/util/: struct.Symbol.html
egraph/: struct.EGraph.html
eval/: bench.sh  plot.py
eval/z3-taso-compare/: Cargo.toml  graph_subst.pb  rules_pb2.py  taso_rules.txt  verify.py
eval/z3-taso-compare/src/: axioms.rs  equation.pest  lib.rs  main.rs  model.rs  optimize.rs  parse.rs  rewrites.rs  z3.in
extract/: struct.AstDepth.html  struct.Extractor.html
language/: fn.merge_if_different.html  struct.RecExpr.html  trait.Analysis.html  trait.Language.html  trait.LanguageChildren.html
pattern/: enum.ENodeOrVar.html  struct.Pattern.html  type.PatternAst.html
rewrite/: struct.ConditionEqual.html  struct.Rewrite.html  trait.Condition.html
run/: enum.StopReason.html  struct.BackoffScheduler.html
scripts/: benchmark.py  compare.py  filter-iai-output.py  run-nightly.py  run-nightly.sh
search.index/: 007e4e384255.js  028f3ed73a59.js  030a2f127bf3.js  0339ff11c19c.js  03eb7d1c54ce.js  04dbe30ad9eb.js  05e53767510c.js  06da3a28c42a.js  0706114fae21.js  07f26e548b80.js  07f53fa3d12d.js  087a1c352beb.js  08b1ba58559f.js  08fbd0051960.js  099fd70da574.js  09d9c8284ec0.js  0c58ebc6fb24.js  0cf7646a61a0.js  0eecef63f6c6.js  0fa9103a9595.js  102639a0bd4e.js  1069163b55bf.js  10717894154c.js  1077dd6a5ab9.js  10d5f2cd7e41.js  10ed76c259b9.js  11780364874b.js  120902df90ea.js  138305265505.js  14e4a4d3d017.js  15680c2526c0.js  1574093f7e50.js  178c5721ecba.js  17d3bbcefa9c.js  18086ac66595.js  180b25a22246.js  1820250e52ac.js  1825d9346539.js  1985bcf08f04.js  1bc72c6f77b6.js  (+130 more)
src/: beam_extract.rs  dag_expr.rs  dot.rs  dtfa.rs  eclass.rs  egraph.rs  ematch_analysis.rs  explain.rs  expr.rs  extract.rs  generic_analysis.rs  language.rs  lattice_analysis.rs  legacy.rs  lib.rs  lp_extract.rs  machine.rs  macros.rs  multipattern.rs  parse.rs  pattern.rs  raw.rs  rewrite.rs  run.rs  semi_persistent.rs  sexp.rs  subst.rs  test.rs  unionfind.rs  util.rs
src/parse/: mod.rs  (+1 more)
subst/: struct.Subst.html
tests/: datalog.rs  explanation-cycle-constant-fold.rs  explanation_cycle_tutorial.rs  finset.rs  herbie.rs  lambda.rs  list.rs  listmap.rs  math.rs  math_no_analysis.rs  no_strings.rs  prop.rs  simple.rs
web-demo/: Cargo.toml  README.md  deploy.sh
web-demo/src/: main.rs  math.rs
web-demo/static/: egg.css  index.html
(+208 files in other folders)
