[package]
authors = ["Max Willsey <me@mwillsey.com>"]
categories = ["data-structures"]
description = "An implementation of egraphs"
edition = "2024"
keywords = ["e-graphs"]
license = "MIT"
name = "egg"
readme = "README.md"
repository = "https://github.com/egraphs-good/egg"
version = "0.11.0"

[dependencies]
env_logger = {version = "0.9.0", default-features = false, optional = true}
hashbrown = {version = "0.15.2", default-features = false}
indexmap = {version = "2.7.0", default-features = false}
log = {version = "0.4.17", default-features = false}
num-bigint = {version = "0.4", default-features = false}
num-traits = {version = "0.2", default-features = false}
quanta = {version = "0.12", optional = true}
rustc-hash = {version = "2.0.0", default-features = false}
smallvec = {version = "1.8.0", features = ["union", "const_generics"]}
spin = {version = "0.9", default-features = false, features = ["spin_mutex", "lazy"]}
symbol_table = {version = "0.4.0", features = ["global"], optional = true}
symbolic_expressions = {version = "5.0.3", optional = true}
thiserror = "2"

# for the lp feature
good_lp = { version = "1", optional = true }

# for the serde-1 feature
serde = {version = "1.0.137", features = ["derive"], optional = true}
vectorize = {version = "0.2.0", optional = true}

# for the reports feature
serde_json = {version = "1.0.81", optional = true}

[dev-dependencies]
ordered-float = "3.0.0"

[features]
default = ["std"]
std = [
  "dep:env_logger",
  "dep:quanta",
  "dep:symbol_table",
  "dep:symbolic_expressions",
  "hashbrown/default",
  "indexmap/std",
  "num-bigint/std",
  "num-traits/std",
  "log/std",
  "rustc-hash/std",
]
# forces the use of indexmaps over hashmaps
deterministic = []
lp = ["std", "good_lp"]
reports = ["serde-1", "serde_json"]
serde-1 = [
  "serde",
  "indexmap/serde",
  "hashbrown/serde",
  "symbol_table?/serde",
  "vectorize",
]
wasm-bindgen = ["std"]

# private features for testing
test-explanations = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
