[package]
name = "egg-math"
version = "0.1.0"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"

[dependencies]
egg = { path = "../egg" }
log = "0.4"
indexmap = "1.1"
libc = "0.2.0"

ordered-float = "1"
env_logger = "0.6"

[features]
parent-pointers = ["egg/parent-pointers"]

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]