[package]
name = "egg"
version = "0.0.2"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"
description = "An implementation of egraphs"
repository = "https://github.com/mwillsey/egg"
readme = "README.md"
license = "MIT"
keywords = ["e-graphs"]
categories = ["data-structures"]

[dependencies]
symbolic_expressions = "5.0.3"
log = "0.4.0"
fxhash = "0.2.1" # fast, deterministic hashing
itertools = "0.8"
smallvec = "0.6"

[dev-dependencies]
env_logger = "0.6.1"
strum = "0.15"
strum_macros = "0.15"
ordered-float = "1"
